[package]
name = "bevy_tokio_network"
version = "0.1.0"
authors = ["D <dusty@isperldead.net>"]
edition = "2018"

[lib]
name = "bevy_tokio_network"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4.0", default-features = false }
tokio = { version = "1.0.1", features = ["rt", "net"] }

[[example]]
name = "echo"
path = "examples/echo.rs"